basic store tile

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -46,7 +46,16 @@
 
     <ul class="horiz-list horiz-list--spacing-base">
       <li><a href="/sydney/stores/djs-hair-artistry/42106">DJ's Hair Artistry</a></li>
-      <li><a href="/sydney/stores/hair-scope-hairdressing/42099">Hair Scope Hairdressing</a></li>
+      <li>
+        <a href="/sydney/stores/hair-scope-hairdressing/42099" class="tile">
+          <div class="tile__image">
+            <%= image_tag 'placeholder-movie.png', alt: '', fetch_format: 'auto' %>
+          </div>
+          <div class="tile__meta">
+            <h3 class="tile__meta__hdr">Hair Scope Hairdressing</h3>
+          </div>
+        </a>
+      </li>
     </ul>
   </section>
 
