format store hours table. add show more/less button

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -96,6 +96,7 @@
 @import "partials/abstractions/toggle-visibility";
 @import "partials/abstractions/box";
 @import "partials/abstractions/toggle-content";
+@import "partials/abstractions/toggle-content-when-active";
 @import "partials/abstractions/angular-cloak";
 @import "partials/abstractions/flag";
 @import "partials/abstractions/overlay";
