--- a/app/views/curations/_more_from_retailers.html.erb
+++ b/app/views/curations/_more_from_retailers.html.erb
@@ -1,5 +1,6 @@
 <nav role="navigation">
-  <ul class="horiz-list horiz-list--spacing-half horiz-list--spacing-half-wrap">
+  <%# [NOTE] all the HTML for this `ul` needs to be outputted on same line %>
+  <ul class="product-curation__retailers horiz-list horiz-list--spacing-half horiz-list--spacing-half-wrap">
     <li>
       <a href="#" class="btn btn--main btn--main-dark btn--main-compact-sides">
         <span class="txt-truncate">Colette by Colette Hayman</span>
@@ -18,6 +19,16 @@
     --><li>
       <a href="#" class="btn btn--main btn--main-dark btn--main-compact-sides">
         <span class="txt-truncate">Lush Fresh Handmade Cosmetics</span>
+      </a>
+    </li><!--
+    --><li>
+      <a href="#" class="btn btn--main btn--main-dark btn--main-compact-sides">
+        <span class="txt-truncate">Billabong</span>
+      </a>
+    </li><!--
+    --><li>
+      <a href="#" class="btn btn--main btn--main-dark btn--main-compact-sides">
+        <span class="txt-truncate">Shubar</span>
       </a>
     </li>
   </ul>
